Did some more stuff

--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="individual_first_key">indKey</string>
     <string name="preference_key">prefsKey</string>
+    <string name="google_drive_key">gdriveKey</string>
 </resources>
