--- a/app/src/main/res/layout/settings_spinner.xml
+++ b/app/src/main/res/layout/settings_spinner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Switch xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sw"
+<Spinner xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/spin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-</Switch>
+</Spinner>
