--- a/app/src/main/res/drawable/dice_stack.xml
+++ b/app/src/main/res/drawable/dice_stack.xml
@@ -1,48 +1,18 @@
-<vector android:height="24dp" android:viewportHeight="132.29167"
-    android:viewportWidth="132.29166" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M81.29,71.77L117.15,71.77A6.88,6.88 0,0 1,124.02 78.64L124.02,114.5A6.88,6.88 0,0 1,117.15 121.38L81.29,121.38A6.88,6.88 0,0 1,74.41 114.5L74.41,78.64A6.88,6.88 0,0 1,81.29 71.77z"
-        android:strokeAlpha="1" android:strokeColor="#000000" android:strokeWidth="3.30729151"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M85.99,83.34m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M112.45,83.34m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M85.99,109.8m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M112.45,109.8m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M15.14,71.77L51,71.77A6.88,6.88 0,0 1,57.88 78.64L57.88,114.5A6.88,6.88 0,0 1,51 121.38L15.14,121.38A6.88,6.88 0,0 1,8.27 114.5L8.27,78.64A6.88,6.88 0,0 1,15.14 71.77z"
-        android:strokeAlpha="1" android:strokeColor="#000000" android:strokeWidth="3.30729151"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M19.84,83.34m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M46.3,83.34m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M19.84,109.8m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M46.3,109.8m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M48.22,10.91L84.07,10.91A6.88,6.88 0,0 1,90.95 17.79L90.95,53.65A6.88,6.88 0,0 1,84.07 60.52L48.22,60.52A6.88,6.88 0,0 1,41.34 53.65L41.34,17.79A6.88,6.88 0,0 1,48.22 10.91z"
-        android:strokeAlpha="1" android:strokeColor="#000000" android:strokeWidth="3.30729151"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M52.92,22.49m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M79.38,22.49m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M52.92,48.95m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M79.38,48.95m-5.29,0a5.29,5.29 0,1 1,10.58 0a5.29,5.29 0,1 1,-10.58 0"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <group>
+        <clip-path android:pathData="M0,0h24v24h-24z M 0,0" />
+    <path
+        android:pathData=" M 15.5 1.5 L 8.5 1.5 C 7.95 1.5 7.5 1.95 7.5 2.5 L 7.5 9.5 C 7.5 10.05 7.95 10.5 8.5 10.5 L 15.5 10.5 C 16.05 10.5 16.5 10.05 16.5 9.5 L 16.5 2.5 C 16.5 1.95 16.05 1.5 15.5 1.5 Z  M 9.75 9 C 9.335 9 9 8.665 9 8.25 C 9 7.835 9.335 7.5 9.75 7.5 C 10.165 7.5 10.5 7.835 10.5 8.25 C 10.5 8.665 10.165 9 9.75 9 Z  M 9.75 4.5 C 9.335 4.5 9 4.165 9 3.75 C 9 3.335 9.335 3 9.75 3 C 10.165 3 10.5 3.335 10.5 3.75 C 10.5 4.165 10.165 4.5 9.75 4.5 Z  M 12 6.75 C 11.585 6.75 11.25 6.415 11.25 6 C 11.25 5.585 11.585 5.25 12 5.25 C 12.415 5.25 12.75 5.585 12.75 6 C 12.75 6.415 12.415 6.75 12 6.75 Z  M 14.25 9 C 13.835 9 13.5 8.665 13.5 8.25 C 13.5 7.835 13.835 7.5 14.25 7.5 C 14.665 7.5 15 7.835 15 8.25 C 15 8.665 14.665 9 14.25 9 Z  M 14.25 4.5 C 13.835 4.5 13.5 4.165 13.5 3.75 C 13.5 3.335 13.835 3 14.25 3 C 14.665 3 15 3.335 15 3.75 C 15 4.165 14.665 4.5 14.25 4.5 Z "
+        android:fillColor="#000000"/>
+    <path
+        android:pathData=" M 21.5 13.5 L 14.5 13.5 C 13.95 13.5 13.5 13.95 13.5 14.5 L 13.5 21.5 C 13.5 22.05 13.95 22.5 14.5 22.5 L 21.5 22.5 C 22.05 22.5 22.5 22.05 22.5 21.5 L 22.5 14.5 C 22.5 13.95 22.05 13.5 21.5 13.5 Z  M 15.75 21 C 15.335 21 15 20.665 15 20.25 C 15 19.835 15.335 19.5 15.75 19.5 C 16.165 19.5 16.5 19.835 16.5 20.25 C 16.5 20.665 16.165 21 15.75 21 Z  M 15.75 16.5 C 15.335 16.5 15 16.165 15 15.75 C 15 15.335 15.335 15 15.75 15 C 16.165 15 16.5 15.335 16.5 15.75 C 16.5 16.165 16.165 16.5 15.75 16.5 Z  M 18 18.75 C 17.585 18.75 17.25 18.415 17.25 18 C 17.25 17.585 17.585 17.25 18 17.25 C 18.415 17.25 18.75 17.585 18.75 18 C 18.75 18.415 18.415 18.75 18 18.75 Z  M 20.25 21 C 19.835 21 19.5 20.665 19.5 20.25 C 19.5 19.835 19.835 19.5 20.25 19.5 C 20.665 19.5 21 19.835 21 20.25 C 21 20.665 20.665 21 20.25 21 Z  M 20.25 16.5 C 19.835 16.5 19.5 16.165 19.5 15.75 C 19.5 15.335 19.835 15 20.25 15 C 20.665 15 21 15.335 21 15.75 C 21 16.165 20.665 16.5 20.25 16.5 Z "
+        android:fillColor="#000000"/>
+    <path
+        android:pathData=" M 9.5 13.5 L 2.5 13.5 C 1.95 13.5 1.5 13.95 1.5 14.5 L 1.5 21.5 C 1.5 22.05 1.95 22.5 2.5 22.5 L 9.5 22.5 C 10.05 22.5 10.5 22.05 10.5 21.5 L 10.5 14.5 C 10.5 13.95 10.05 13.5 9.5 13.5 Z  M 3.75 21 C 3.335 21 3 20.665 3 20.25 C 3 19.835 3.335 19.5 3.75 19.5 C 4.165 19.5 4.5 19.835 4.5 20.25 C 4.5 20.665 4.165 21 3.75 21 Z  M 3.75 16.5 C 3.335 16.5 3 16.165 3 15.75 C 3 15.335 3.335 15 3.75 15 C 4.165 15 4.5 15.335 4.5 15.75 C 4.5 16.165 4.165 16.5 3.75 16.5 Z  M 6 18.75 C 5.585 18.75 5.25 18.415 5.25 18 C 5.25 17.585 5.585 17.25 6 17.25 C 6.415 17.25 6.75 17.585 6.75 18 C 6.75 18.415 6.415 18.75 6 18.75 Z  M 8.25 21 C 7.835 21 7.5 20.665 7.5 20.25 C 7.5 19.835 7.835 19.5 8.25 19.5 C 8.665 19.5 9 19.835 9 20.25 C 9 20.665 8.665 21 8.25 21 Z  M 8.25 16.5 C 7.835 16.5 7.5 16.165 7.5 15.75 C 7.5 15.335 7.835 15 8.25 15 C 8.665 15 9 15.335 9 15.75 C 9 16.165 8.665 16.5 8.25 16.5 Z "
+        android:fillColor="#000000"/>
+    </group>
 </vector>
