--- a/app/src/main/res/drawable/die_roll.xml
+++ b/app/src/main/res/drawable/die_roll.xml
@@ -1,28 +1,29 @@
-<vector android:height="24dp" android:viewportHeight="52.916668"
-    android:viewportWidth="52.916664" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M2.77,25.14L12.78,14.6A2.72,2.86 0,0 1,16.62 14.6L26.63,25.14A2.86,2.72 90,0 1,26.63 29.18L16.62,39.73A2.86,2.72 90,0 1,12.78 39.73L2.77,29.18A2.86,2.72 90,0 1,2.77 25.14z"
-        android:strokeAlpha="1" android:strokeColor="#000000" android:strokeWidth="3.30729151"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M7.31,27.16m-1.48,1.56a2.2,2.09 90,1 1,2.96 -3.11a2.2,2.09 90,1 1,-2.96 3.11"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M14.7,19.38m-1.48,1.56a2.2,2.09 90,1 1,2.96 -3.11a2.2,2.09 90,1 1,-2.96 3.11"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M14.7,34.94m-1.48,1.56a2.2,2.09 90,1 1,2.96 -3.11a2.2,2.09 90,1 1,-2.96 3.11"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillAlpha="1" android:fillColor="#000000"
-        android:pathData="M22.09,27.16m-1.48,1.56a2.2,2.09 90,1 1,2.96 -3.11a2.2,2.09 90,1 1,-2.96 3.11"
-        android:strokeAlpha="1" android:strokeColor="#00000000" android:strokeWidth="0"/>
-    <path android:fillColor="#FF000000"
-        android:pathData="m18.71,11.71 l21.26,-0.04 1.44,1.41L20.01,13.08Z" android:strokeWidth="0.2248887"/>
-    <path android:fillColor="#FF000000"
-        android:pathData="m25.13,18.71l21.4,0l1.49,1.41L26.62,20.12Z" android:strokeWidth="0.22304034"/>
-    <path android:fillColor="#FF000000"
-        android:pathData="m29.95,26.46l21.4,0c0.3,0.62 0.3,0.79 0,1.41L29.95,27.87c0.28,-0.45 0.31,-0.84 0,-1.41z" android:strokeWidth="0.22304034"/>
-    <path android:fillColor="#FF000000"
-        android:pathData="m26.31,33.36l21.4,0l-1.24,1.41L25.13,34.77Z" android:strokeWidth="0.22304034"/>
-    <path android:fillColor="#FF000000"
-        android:pathData="m19.95,39.84l21.4,0l-1.11,1.35 -21.53,0.06z" android:strokeWidth="0.21804549"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="6.35"
+        android:viewportHeight="6.3500004">
+    <path
+        android:pathData="M1.429,1.737L0.099,2.995C-0.006,3.094 -0.006,3.256 0.099,3.355l1.33,1.258c0.105,0.099 0.276,0.099 0.38,0l1.33,-1.258c0.105,-0.099 0.105,-0.261 0,-0.359L1.809,1.737C1.705,1.639 1.534,1.639 1.429,1.737ZM1.762,4.118C1.683,4.193 1.556,4.193 1.477,4.118 1.398,4.044 1.398,3.923 1.477,3.849 1.556,3.774 1.683,3.774 1.762,3.849 1.841,3.923 1.841,4.044 1.762,4.118ZM0.907,3.31C0.828,3.384 0.7,3.384 0.621,3.31 0.543,3.235 0.543,3.115 0.621,3.04 0.7,2.966 0.828,2.966 0.907,3.04 0.985,3.115 0.985,3.235 0.907,3.31ZM1.762,3.31c-0.079,0.075 -0.206,0.075 -0.285,0 -0.079,-0.075 -0.079,-0.195 0,-0.27 0.079,-0.075 0.206,-0.075 0.285,0 0.079,0.075 0.079,0.195 0,0.27zM2.617,3.31C2.538,3.384 2.411,3.384 2.332,3.31 2.253,3.235 2.253,3.115 2.332,3.04c0.079,-0.075 0.206,-0.075 0.285,0 0.079,0.075 0.079,0.195 0,0.27zM1.762,2.501C1.683,2.576 1.556,2.576 1.477,2.501 1.398,2.427 1.398,2.306 1.477,2.232 1.556,2.157 1.683,2.157 1.762,2.232 1.841,2.306 1.841,2.427 1.762,2.501Z"
+        android:fillColor="#000000"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m3.414,2.995 l2.842,0.013c0,0 0.087,0.081 0.09,0.141 0.003,0.06 -0.075,0.154 -0.075,0.154l-2.857,0c0,0 0.063,-0.087 0.065,-0.141 0.002,-0.062 -0.065,-0.167 -0.065,-0.167z"
+        android:strokeWidth="0.2839027"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m2.309,4.407l2.894,0l-0.325,0.302 -2.933,0.012z"
+        android:strokeWidth="0.28751221"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M2.93,3.791L5.888,3.791l-0.336,0.308L2.63,4.099Z"
+        android:strokeWidth="0.28864837"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m2.61,2.245 l2.912,0.007 0.346,0.308l-2.91,0z"
+        android:strokeWidth="0.28796509"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m1.938,1.628 l2.981,0.012 0.277,0.302 -2.929,-0.006z"
+        android:strokeWidth="0.28728661"/>
 </vector>
