--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">80dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fam_1">54dp</dimen>
+    <dimen name="fam_2">100dp</dimen>
+    <dimen name="fam_3">146dp</dimen>
+    <dimen name="fam_4">192dp</dimen>
 </resources>
