--- a/app/src/main/res/layout/side_complex_part.xml
+++ b/app/src/main/res/layout/side_complex_part.xml
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="text|textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
         app:layout_constraintStart_toEndOf="@+id/remove"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +29,6 @@
         android:id="@+id/numberPicker"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/editText" />
