Change how my FloatingActionMenu works.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,7 +8,7 @@
         android:title="@string/formula_nav_drawer" />
     <item
         android:id="@+id/die"
-        android:icon="@drawable/die"
+        android:icon="@drawable/custom_die"
         android:title="@string/die_nav_drawer" />
     <item
         android:id="@+id/dice"
