--- a/app/src/main/res/drawable/die.xml
+++ b/app/src/main/res/drawable/die.xml
@@ -3,7 +3,11 @@
         android:height="24dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
+    <group>
+        <clip-path android:pathData="M0,0h24v24h-24z M 0,0" />
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M19,3L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM7.5,18c-0.83,0 -1.5,-0.67 -1.5,-1.5S6.67,15 7.5,15s1.5,0.67 1.5,1.5S8.33,18 7.5,18zM7.5,9C6.67,9 6,8.33 6,7.5S6.67,6 7.5,6 9,6.67 9,7.5 8.33,9 7.5,9zM12,13.5c-0.83,0 -1.5,-0.67 -1.5,-1.5s0.67,-1.5 1.5,-1.5 1.5,0.67 1.5,1.5 -0.67,1.5 -1.5,1.5zM16.5,18c-0.83,0 -1.5,-0.67 -1.5,-1.5s0.67,-1.5 1.5,-1.5 1.5,0.67 1.5,1.5 -0.67,1.5 -1.5,1.5zM16.5,9c-0.83,0 -1.5,-0.67 -1.5,-1.5S15.67,6 16.5,6s1.5,0.67 1.5,1.5S17.33,9 16.5,9z"/>
+        android:pathData=" M 4.409 0 L 19.591 0 C 22.024 0 24 1.976 24 4.409 L 24 19.591 C 24 22.024 22.024 24 19.591 24 L 4.409 24 C 1.976 24 0 22.024 0 19.591 L 0 4.409 C 0 1.976 1.976 0 4.409 0 M 3 5.5 C 3 4.12 4.12 3 5.5 3 C 6.88 3 8 4.12 8 5.5 C 8 6.88 6.88 8 5.5 8 C 4.12 8 3 6.88 3 5.5 M 4.409 0 M 9.5 12 C 9.5 10.62 10.62 9.5 12 9.5 C 13.38 9.5 14.5 10.62 14.5 12 C 14.5 13.38 13.38 14.5 12 14.5 C 10.62 14.5 9.5 13.38 9.5 12 M 4.409 0 M 3 18.5 C 3 17.12 4.12 16 5.5 16 C 6.88 16 8 17.12 8 18.5 C 8 19.88 6.88 21 5.5 21 C 4.12 21 3 19.88 3 18.5 M 4.409 0 M 16 18.5 C 16 17.12 17.12 16 18.5 16 C 19.88 16 21 17.12 21 18.5 C 21 19.88 19.88 21 18.5 21 C 17.12 21 16 19.88 16 18.5 M 4.409 0 Z  M 16 5.5 C 16 4.12 17.12 3 18.5 3 C 19.88 3 21 4.12 21 5.5 C 21 6.88 19.88 8 18.5 8 C 17.12 8 16 6.88 16 5.5 Z "
+        android:fillType="evenOdd"
+        android:fillColor="#000000"/>
+    </group>
 </vector>
