--- a/app/src/main/res/layout/side_complex_part.xml
+++ b/app/src/main/res/layout/side_complex_part.xml
@@ -10,9 +10,9 @@
         android:layout_width="30dp"
         android:layout_height="0dp"
         android:background="?android:attr/selectableItemBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/editText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editText"
         app:srcCompat="@drawable/remove" />
 
     <EditText
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text|textPersonName"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/numberPicker"
         app:layout_constraintStart_toEndOf="@+id/remove"
         app:layout_constraintTop_toTopOf="parent" />
