--- a/app/src/main/res/layout/sides_layout.xml
+++ b/app/src/main/res/layout/sides_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"
         android:orientation="vertical"
         android:padding="8dp"></LinearLayout>
 </android.support.v7.widget.CardView>
