--- a/app/src/main/res/layout/dice_die_list_item.xml
+++ b/app/src/main/res/layout/dice_die_list_item.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/sides"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:textAlignment="center"
